samples/_failures_safe/1761268119_8aa0cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c73cd700.c: In function ‘main’:
./samples/SAFE/__tmp_c73cd700.c:143:9: error: expected declaration or statement at end of input
  143 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_c73cd700.c:143:9: error: expected declaration or statement at end of input
